calendar/src/main/java/com/example/calendar/global/error/exception/CustomException.java
package com.example.calendar.global.error.exception;

import com.example.calendar.global.error.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}